--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 
   <title>Tool Guide for HTML and CSS by Mia!</title>
-<meta charset="UTF-8">
+  <meta charset="UTF-8">
 </head>
 
 <body>
@@ -13,22 +13,22 @@
 
   <p>In this website we will evaluate the tools in HTML and CSS that are needed to help build a website.</p>
   <p>What will be included in our toolbox:</p>
-        <ul>
-            <li><a href="dev.html">Development Environment</a></li>
-            <li><a href="structure.html">Basic HTML Structure</a></li>
-            <li><a href="snippet.html">The Anatomy of an HTML Tag</a></li>
-            <li><a href="basic-tags.html">Basic Tags</a></li>
-            <li><a href="multimedia.html">Multimedia</a></li>
-            <li><a href="basic-css.html">Common CSS Properties</a></li>
-            <li><a href="basic-tags-styles.html">Styling a Page</a></li>
-        </ul>
+  <ul>
+    <li><a href="dev.html">Development Environment</a></li>
+    <li><a href="structure.html">Basic HTML Structure</a></li>
+    <li><a href="snippet.html">The Anatomy of an HTML Tag</a></li>
+    <li><a href="basic-tags.html">Basic Tags</a></li>
+    <li><a href="multimedia.html">Multimedia</a></li>
+    <li><a href="basic-css.html">Common CSS Properties</a></li>
+    <li><a href="basic-tags-styles.html">Styling a Page</a></li>
+  </ul>
 
-        <p>Click on the first link to get started!</p>
+  <p>Click on the first link to get started!</p>
 
-<div>
+  <div>
 
-  <a><img src="toolbox.jpg" alt="picture of toolbox "></a>
-</div>
+    <a><!-- Don't forget to give a src attribute to your a tag --><img src="toolbox.jpg" alt="picture of toolbox "></a>
+  </div>
 
 
 </body>
