--- a/multimedia.html
+++ b/multimedia.html
@@ -15,4 +15,4 @@
 
 <audio controls>
 <source src="https://s3.amazonaws.com/freecodecamp/simonSound1.mp3"></source>
-</audio>
+</audio><!--No sound played for some reason-->
